--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
   "name": "qingyu-db-client",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "none",
+  "main": "src/main/main.js",
   "directories": {
     "doc": "docs",
     "test": "tests"
   },
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron .",
+    "dev": "concurrently -k \"vite\" \"wait-on tcp:3000 && cross-env NODE_ENV=development electron .\"",
+    "build": "vite build && electron-builder",
+    "watch": "vite build --watch"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "QingYu",
+  "license": "MIT",
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "babel-plugin-import": "^1.13.8",
+    "concurrently": "^9.1.2",
+    "cross-env": "^7.0.3",
+    "electron": "^35.1.1",
+    "vite": "^6.2.3",
+    "vite-plugin-style-import": "^2.0.0",
+    "wait-on": "^8.0.3"
+  },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "antd": "^5.24.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@craco/craco": "^7.1.0",
-    "craco-less": "^3.0.1"
   }
 }
